[tool.poetry]
name = "snacker-tracker-reporter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
httpx = "^0.28.1"
sqlalchemy = "^2.0.37"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
hypothesis = "^6.82.1"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
markers = [
    "fuzz: mark test as a fuzz test"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
